Fix support button overlap with footer update message

--- a/app/static/css/extra.css
+++ b/app/static/css/extra.css
@@ -139,3 +139,7 @@
 .chosen-container-single .chosen-single div {
     top: 5px;
 }
+
+#page-wrapper .footer {
+    padding-right: 50px !important;
+}
